fix wrap issue on activities section and work on footer

--- a/css/style.css
+++ b/css/style.css
@@ -79,7 +79,6 @@ body {
 }
 
 .findaplace {
-  /* height: 26px; */
   font-weight: 700;
   font-size: 22px;
   line-height: 25.83px;
@@ -194,7 +193,7 @@ i.fa-solid.fa-circle-info {
 }
 
 .main-container {
-  width: 100%;
+  /* width: 100%; */
   padding: 0 50px;
   box-sizing: border-box;
   margin-top: 20px;
@@ -346,6 +345,8 @@ li {
 
 /****** Popular ***********/
 .popular {
+  display: flex;
+  flex-direction: column;
   width: 32%;
 }
 
@@ -417,8 +418,8 @@ li {
 
 .activities-cards .card {
   display: flex;
-  /* border-radius: 20px;
-  padding: 0px 15px 0px 15px; */
+  border-radius: 20px;
+  padding: 0px 15px 0px 15px;
 }
 
 .activities-cards:hover {
@@ -442,11 +443,14 @@ li {
 /** 4. Footer STARTS **/
 
 .section-footer {
+  display: flex;
+  flex-wrap: wrap;
   background-color: #f2f2f2;
 }
 
 .footer-info {
   display: flex;
+  flex-wrap: wrap;
 }
 
 .footer-title {
@@ -455,6 +459,7 @@ li {
 }
 
 .footer-about {
+  flex-flow: column;
   gap: 15px;
   align-self: flex-start;
 }
@@ -466,7 +471,7 @@ li {
 
 .footer-support {
   margin-left: auto;
-  margin-right: auto;
+  /* margin-right: auto; */
   gap: 15px;
 }
 /** 4. Footer ENDS**/
